k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-service
  template:
    metadata:
      labels:
        app: oauth-service
    spec:
      containers:
        - name: oauth-service
          image: kieger/oauth-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-service
spec:
  selector:
    app: oauth-service
  ports:
    - port: 8081
      targetPort: 8081
