k8s/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.jwtauth.nani.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth-service
                port:
                  number: 8081
